fix scrollbars

--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -5,6 +5,7 @@
     margin-bottom: 0px;
     height: 6vh;
     background-color: white;
+    overflow: hidden;
 }
 
 .main-header-container a{
